[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netskope-py-sdk"
version = "1.0.2"
description = "The official Netskope Python SDK — a modern, typed, and intuitive interface to the Netskope REST API v2."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Netskope", email = "sdk@netskope.com" },
]
keywords = [
    "netskope",
    "sdk",
    "security",
    "sase",
    "sse",
    "zero-trust",
    "casb",
    "dlp",
    "swg",
    "ztna",
    "api",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "mypy>=1.13",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/netSkopeoss/netskope-py-sdk"
Documentation = "https://netSkopeoss.github.io/netskope-py-sdk"
Repository = "https://github.com/netSkopeoss/netskope-py-sdk"
Issues = "https://github.com/netSkopeoss/netskope-py-sdk/issues"
Changelog = "https://github.com/netSkopeoss/netskope-py-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/netskope"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that call the live Netskope API (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["netskope"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["RUF022"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["netskope"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
]
